--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,20 @@
             <version>8.0.1</version>
             <scope>provided</scope>
         </dependency>
-<dependency>
-    <groupId>org.glassfish.web</groupId>
-    <artifactId>javax.servlet.jsp.jstl</artifactId>
-    <version>1.2.4</version>
-</dependency>
+        
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>javax.servlet.jsp.jstl</artifactId>
+            <version>1.2.4</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+        
     </dependencies>
-
 
     <build>
         <plugins>
