--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+<web-app version="3.1"  
+         xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
         <servlet-name>MyGenericServlet</servlet-name>
         <servlet-class>com.web.study.servlet.MyGenericServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>MyGenericServlet</servlet-name>
-        <url-pattern>/servlet/MyGenericServlet</url-pattern>
+        <url-pattern>/servlet/my_generic_servlet</url-pattern>
     </servlet-mapping>
+    
     <servlet>
         <servlet-name>LottoServlet</servlet-name>
         <servlet-class>com.web.study.servlet.LottoServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-         <servlet-name>LottoServlet</servlet-name>
-         <url-pattern>/servlt/LottoServlet</url-pattern>
-        
+        <servlet-name>LottoServlet</servlet-name>
+        <url-pattern>/servlet/lotto</url-pattern>
     </servlet-mapping>
+    
     
     <session-config>
         <session-timeout>
